--- a/start/views/layout.jade
+++ b/start/views/layout.jade
@@ -3,11 +3,11 @@ html
   head
     title= title
     
-    meta(property='og:url', content='http://kartsinteraction.com')
+    meta(property='og:url', content='')
     meta(property='og:type', content='website')
-    meta(property='og:title', content='Interaction_Practice')
-    meta(property='og:description', content='Interaction 작업 결과물를 위한 website')
-    meta(property='og:image', content='http://220.230.119.76:3000/Posts/13/Baek_SeongYeol/thumbnail.png')
+    meta(property='og:title', content='Sloped News Title')
+    meta(property='og:description', content='website for Information visualization II')
+    meta(property='og:image', content='')
     
     link(href ="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
