--- a/start/views/Home.jade
+++ b/start/views/Home.jade
@@ -50,7 +50,7 @@ block content
     
     #head_Title{
       
-      padding-top : 100px;  
+      padding-top : 20px;  
       font-size: 28px;
       font-weight: bold;
       font-kerning: auto;
@@ -59,6 +59,14 @@ block content
       text-shadow: 5px 5px 5px lightGray;
       
       color : black;
+    }
+    
+    .image{
+      margin-top : 180px;
+      margin-left : 20px;
+      width : 250px;
+      height : auto;
+      
     }
     
     
@@ -72,6 +80,8 @@ block content
     
   div#contents
     div#homeImgDiv
-      p#head_Title Sloped News Title <br> 기울어진 뉴스기사
+      img.image(src='/Posts/13/Logo.png')
+      p#head_Title Sloped News Title <br> 기울어진 뉴스기사<br><br><br>
+        
       
       
