--- a/start/views/index1.jade
+++ b/start/views/index1.jade
@@ -228,13 +228,10 @@ block content
       div#head_TempDiv
         p#head_Title Preface
     div#content_Main
-      div#video-wrap
-        embed#DetailYoutube(src="https://www.youtube.com/embed/NxvQPzrg2Wg" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture')
       div.content_P
-        hr.contentHR
         p.content_P
         p.content_P#body  <b>개요</b> <br> <br> 뉴스 기사의 제목을 정하는 규칙이 남/여 두 성별에 공평하게 적용되지 않는다는 것은 잘 알려진 사실입니다. <br> 저는 이 사실에 문제의식을 가지고, 경향신문 인터랙티브 특별기획 <a link="http://news.khan.co.kr/kh_storytelling/2019/labordeath/?fbclid=IwAR1J22nsO7BUjBuZiZWeMvN2emkU-QaqTv0z5Xve14pVER-VOijMGcoZPT0">"매일 김용균이 있었다"</a>로부터 영감을 받아 <br> Sloped News Title, 기울어진 기사제목이라는 프로젝트를 기획했습니다. 빅카인즈를 통해 얻어진 <br> 기사 데이터의 개별적인 성향을 분석하고 모아 보여주는 것으로써 전체적인 기울기를 확인할 수 있도록 구성했습니다.
-        p.content_P#body  <br><b>수집대상</b> <br><br> 2019년 9월 이후 가해자/피해자의 성별이 서로 다른(남성/여성/논바이너리) 범죄를 보도한 기사의 제목들 (약 2천건) <br><br> <b>규칙</b> <br><br> 범죄를 서술하는 내용이 가해자 or 피해자가 인식됨에 있어 유리 or 불리한가? <br> = 유리한 경우 해당 성별에 +1 불리한 경우 -1 <br> <br>행동의 동기나 평가가 서술되어 있는가? <br> = 동기의 경우 해당 성별에 +1 평가의 경우 -1 <br><br> 범죄 호칭이 간접적으로 서술되어 있는가? <br> = 서술되어 있다면 해당 성별에 +1 <br> <br>한쪽 성별만 호명하고 있는가? <br> = 호명하고 있다면, 호명된 성별에 -1
+        p.content_P#body  <br><b>수집대상</b> <br><br> 2019년 10월 사이의 범죄를 보도한 기사 제목들 (약 천건) <br><br> <b>규칙</b> <br><br> 범죄를 서술하는 내용이 가해자 or 피해자가 인식됨에 있어 유리 or 불리한가? <br> = 유리한 경우 해당 성별에 +1 불리한 경우 -1 <br> <br>행동의 동기나 평가가 서술되어 있는가? <br> = 동기의 경우 해당 성별에 +1 평가의 경우 -1 <br><br> 범죄 호칭이 간접적으로 서술되어 있는가? <br> = 서술되어 있다면 해당 성별에 +1 <br> <br>한쪽 성별만 호명하고 있는가? <br> = 호명하고 있다면, 호명된 성별에 -1
         p.content_P 
         p.content_P
         p.Bottom
