--- a/start/views/index4.jade
+++ b/start/views/index4.jade
@@ -90,7 +90,7 @@ block content
         }
       });
       
-      
+      /*
       $('.legendMale').css('background-color', colorCode);
       $('#dots3남성').css('background-color', colorCode);
       $('#dots2남성').css('background-color', colorCode);
@@ -104,7 +104,7 @@ block content
       $('#dots1여성').css('background-color', colorCode2);
       $('#dots0여성').css('background-color', colorCode2);
       $('#dots-1여성').css('background-color', colorCode2);
-      $('#dots-2여성').css('background-color', colorCode2);
+      $('#dots-2여성').css('background-color', colorCode2);*/
     });
 
   style.
@@ -115,6 +115,8 @@ block content
       text-align : center;
       
       transition : 0s;
+      
+      transform : rotate(-12deg);
       //pointer-events:none;
     }
     
@@ -226,7 +228,7 @@ block content
       margin-bottom : -35px;
       width : 20px;
       height : 20px;
-      background-color : lightGray;
+      background-color : #D6A470;
       opacity : 0.75;
     }
     .legendFemale{
@@ -234,7 +236,7 @@ block content
       margin-bottom : -35px;
       width : 20px;
       height : 20px;
-      background-color : lightGray;
+      background-color : #803FB5;
       opacity : 0.75;
     }
     .legendGood{
@@ -299,52 +301,62 @@ block content
     }
     
     #dots0남성{
+      background-color: #D6A470;
       opacity : 0.1;
     }
     
     #dots1남성{
+      background-color: #D6A470;
       opacity : 0.65;
     }
     
     #dots2남성{
-      opacity : 0.1;
+      background-color: #D6A470;
+      opacity : 1;
+    }
+    
+    #dots3남성{
+      background-color: #FFC04F;
+      opacity : 1;
     }
     
     #dots-1남성{
+      background-color: #D6A470;
       opacity : 0.65;
       border-radius : 0px;
     }
     
     #dots-2남성{
-      opacity : 0.1;
+      background-color: #D6A470;
+      opacity : 1;
       border-radius : 0px;
     }
     
     
     #dots0여성{
-      background-color : red;
+      background-color : #803FB5;
       opacity : 0.1;
     }
     
     #dots1여성{
-      background-color : red;
+      background-color : #803FB5;
       opacity : 0.65;
     }
     
     #dots2여성{
-      background-color : red;
-      opacity : 0.1;
+      background-color : #803FB5;
+      opacity : 1;
     }
     
     #dots-1여성{
-      background-color : red;
+      background-color : #803FB5;
       opacity : 0.65;
       border-radius : 0px;
     }
     
     #dots-2여성{
-      background-color : red;
-      opacity : 0.1;
+      background-color : #803FB5;
+      opacity : 1;
       border-radius : 0px;
     }
     
